отображаем еду и змею на экране

--- a/style.css
+++ b/style.css
@@ -63,9 +63,9 @@ display: none;
     flex-wrap: wrap;
 }
 
-.excel {
-    width: 30px;
-    height: 30px;
+.kube {
+    width: 60px;
+    height: 60px;
 }
 
 
