--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@ body {
 
 .result {
     position: absolute;
-    top: 20px;
+    top: 10px;
     left: 20px;
     font-size: 40px;
     font-weight: bold;
+}
+
+.result:last-of-type {
+    top: 50px;
 }
 
 .img-snake {
@@ -94,6 +98,7 @@ display: none;
     text-align: center;
     z-index: 2;
     font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
     justify-self: center;
     align-self: center;
 }
